# pytest

./: .env.example  .gitignore  Corefile  Corefile.tmpl  Dockerfile  Makefile  OFFER.md  README.md  docker-compose.simple.yml  docker-compose.traefik.yml  docker-compose.yml  hypermodulartest.py  pyproject.toml
coredns/: Corefile  Corefile.tmpl
dnsmasq/: dnsmasq.conf
scripts/: free-port-53.sh  free-port-5353.sh  free-port-80.sh  free-port-8080.sh
tests/: test_dns.sh
