[project]
name = "hyper-modular-test"
version = "0.1.0"
description = "hypermodular test for generating hyper modularindex of software projects structure."
authors = [
    { name = "Tom Sapletta", email = "info@hypermodular.com" }
]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "networkx>=3.0",
    "python-louvain>=0.16"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools]
packages = ["hypermodular"]

[tool.black]
line-length = 88
target-version = ["py38"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
